# hwrs640_rnn_hw

./: .gitignore  LICENSE  README.md  main.py  plot_comparison.py  pyproject.toml
notebooks/: 01_eda.ipynb
outputs/: eval_test_lstm.csv  eval_test_transformer.csv  lstm_best.pt  lstm_history.json  transformer_best.pt  transformer_history.json
outputs/normalizers/: dyn_norm.pkl  static_norm.pkl  tgt_norm.pkl
src/: data.py  model.py  train.py  utils.py  visualization.py
